--- a/src/assets/FrontTheme/css/style.css
+++ b/src/assets/FrontTheme/css/style.css
@@ -235,7 +235,7 @@ ul.filter-btn-list li {
     width: 100%;
     height: 450px;
     display: block;
-    background: url(../../assets/FrontTheme/images/lunch.png) no-repeat;
+    background: url(../images/lunch.png) no-repeat;
     position: absolute;
     z-index: -1;
     opacity: 0.10;
@@ -563,7 +563,7 @@ RESPONSIVE MEDIA
     .bg-image {
         background-position: center;
         background-size: cover;
-        background: url(assets/images/bg_comp.jpg) repeat-y;
+        background: url(../images/bg_comp.jpg) repeat-y;
     }
 
     footer {
@@ -725,7 +725,7 @@ RESPONSIVE MEDIA
     .bg-image {
         background-position: center;
         background-size: cover;
-        background: url(assets/images/bg_comp.jpg) repeat-y;
+        background: url(../images/bg_comp.jpg) repeat-y;
     }
 
     footer {
@@ -892,7 +892,7 @@ RESPONSIVE MEDIA
     .bg-image {
         background-position: center;
         background-size: cover;
-        background: url(assets/images/bg_comp.jpg) repeat-y;
+        background: url(../images/bg_comp.jpg) repeat-y;
     }
 
     .logo {
