--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,12 @@
+@import "./assets/Theme/css/style.css";
+@import "../node_modules/ng-zorro-antd/ng-zorro-antd.min.css";
+@import "../node_modules/ng-zorro-antd/ng-zorro-antd.min.css";
+@import "../node_modules/primeicons/primeicons.css";
+@import "../node_modules/primeng/resources/themes/luna-blue/theme.css";
+@import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 @import "~@ng-select/ng-select/themes/default.theme.css";
-@import "~ng-pick-datetime/assets/style/picker.min.css";
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import "~ng-pick-datetime-ex/assets/style/picker.min.css";
 
 body {
   font-family: "Poppins", sans-serif;
