--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -163,10 +163,10 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6">
-                            <span class="powered-by">Powered By | MATTS TECHNOLOGIES</span>
+                            <span class="powered-by">Powered By | Dcodics</span>
                         </div>
                         <div class="col-md-6">
-                            <span class="copyrights">COPYRIGHT - 2020</span>
+                            <span class="copyrights">COPYRIGHT - 2024</span>
                         </div>
                     </div>
                     
